# ZadanieDlaP

./: CMakeLists.txt  README
include/: rectangle.h  shape.h  shapefactory.h  triangle.h
resources/: parameters.xml
src/: main.cpp  rectangle.cpp  shapefactory.cpp  triangle.cpp
